--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <head>
+        <title>Exoplanet Viewer</title>
+    </head>
+
+<script src="https://d3js.org/d3.v7.min.js"></script>
+
 <body>
 
     <div class = top-bar-container>
